fixed: various issues when serving forms in a iframe on iOS devices (but making scrolling very slow on iOS)
https://github.com/OpenClinica/enketo-express-oc/issues/116
https://github.com/OpenClinica/enketo-express-oc/issues/160
https://github.com/OpenClinica/enketo-express-oc/issues/154

--- a/app/views/styles/component/_iframe.scss
+++ b/app/views/styles/component/_iframe.scss
@@ -3,8 +3,24 @@
         border-radius: 0;
         border: none;
     }
+
     .form-header__button--homescreen {
         display: none;
+    }
+}
+
+// https://github.com/PierBover/ios-iframe-fix
+.ios-iframe-bug-wrap {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: auto;
+    // if -webkit-overflow-srolling: touch is enabled, the ios-iframe bugs come back
+
+    .main-loader {
+        height: 100vh;
     }
 }
 
